Update target blank

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="about"><a href="#about-header" title="About me">About</a></li>
           <li class="project"><a href="#project-header" title="My projects">Portfolio</a></li>
           <li class="contact"><a href="#contact-header" title="Contact me">Contact</a></li>
-          <li class="resume d-none d-sm-inline"><a href="src/MMLResume.pdf" title="View my Resume" target="_blank">Resume</a></li>
+          <li class="resume d-none d-sm-inline"><a href="src/MMLResume.pdf" title="View my Resume" target="_blank" rel="noopener">Resume</a></li>
           <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</a></li>
         </ul>
      </nav>
@@ -70,8 +70,8 @@
       <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-world-weather.netlify.app" target="_blank" title="Launch weather app">Weather</a> -<a href="https://mml95-react-world-weather.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
-              <div class="project-1 border-box"><a href="https://mml95-world-weather.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-world-weather.netlify.app" target="_blank" rel="noopener" title="Launch weather app">Weather</a> -<a href="https://mml95-react-world-weather.netlify.app" title="Launch React app version" target="_blank" rel="noopener"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-world-weather.netlify.app" target="_blank" rel="noopener">
                   <img
                     src="/src/orange-weather.png"
                     class="img-fluid"
@@ -81,15 +81,15 @@
                   </a>
               </div>
                 <p class="mt-4 project-description">
-                HTML, CSS, Bootstrap, JavaScript - <a href="https://github.com/mml95/wx-app-javascript-2" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                HTML, CSS, Bootstrap, JavaScript - <a href="https://github.com/mml95/wx-app-javascript-2" target="_blank" rel="noopener" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-world-clock.netlify.app" target="_blank" title="Launch world clock">World Clock</a></h3>
-              <div class="project-1 border-box"><a href="https://mml95-world-clock.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-world-clock.netlify.app" target="_blank" rel="noopener" title="Launch world clock">World Clock</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-world-clock.netlify.app" target="_blank" rel="noopener">
                   <img
                     src="/src/world-clock.png"
                     class="img-fluid"
@@ -99,7 +99,7 @@
                   </a>
               </div>
                 <p class="mt-4 project-description">
-                HTML, CSS and JavaScript - <a href="https://github.com/mml95/world-clock" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                HTML, CSS and JavaScript - <a href="https://github.com/mml95/world-clock" target="_blank" rel="noopener" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -108,8 +108,8 @@
       <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-dictionary.netlify.app" target="_blank" title="Launch dictionary">Dictionary</a></h3>
-              <div class="project-1 border-box"><a href="https://mml95-dictionary.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-dictionary.netlify.app" target="_blank" rel="noopener" title="Launch dictionary">Dictionary</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-dictionary.netlify.app" target="_blank" rel="noopener">
                   <img
                     src="/src/dictionary.png"
                     class="img-fluid"
@@ -119,15 +119,15 @@
                   </a>
               </div>
                 <p class="mt-4 project-description">
-                HTML, CSS, JavaScript and React - <a href="https://github.com/mml95/dictionary-app-react" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                HTML, CSS, JavaScript and React - <a href="https://github.com/mml95/dictionary-app-react" target="_blank" rel="noopener" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-arizona-travel-website.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
-              <div class="project-1 border-box"><a href="https://mml95-arizona-travel-website.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-arizona-travel-website.netlify.app/" target="_blank" rel="noopener" title="Launch travel website">Travel</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-arizona-travel-website.netlify.app/" target="_blank" rel="noopener">
                 <img
                   src="/src/Arizona.png"
                   class="img-fluid"
@@ -137,7 +137,7 @@
                 </a>
               </div>
                 <p class="mt-4 bottom-row">
-                HTML, CSS/Grid - <a href="https://github.com/mml95/arizona-travel" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                HTML, CSS/Grid - <a href="https://github.com/mml95/arizona-travel" target="_blank" rel="noopener" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -146,8 +146,8 @@
       <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-travel-ops.netlify.app" target="_blank" title="Launch travel website">Travel Deux</a></h3>
-            <div class="project-1 border-box"><a href="https://mml95-travel-ops.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-travel-ops.netlify.app" target="_blank" rel="noopener" title="Launch travel website">Travel Deux</a></h3>
+            <div class="project-1 border-box"><a href="https://mml95-travel-ops.netlify.app" target="_blank" rel="noopener">
                 <img
                   src="/src/hawaii-travel.png"
                   class="img-fluid"
@@ -157,15 +157,15 @@
                 </a>
             </div>
                 <p class="mt-4 project-description">
-                HTML, CSS/Flexbox - <a href="https://github.com/mml95/travel-ops" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                HTML, CSS/Flexbox - <a href="https://github.com/mml95/travel-ops" target="_blank" rel="noopener" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-35mm-cameras.netlify.app" target="_blank" title="Launch camera landing page">Photography</a></h3>
-            <div class="project-1 border-box"><a href="https://mml95-35mm-cameras.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-35mm-cameras.netlify.app" target="_blank" rel="noopener" title="Launch camera landing page">Photography</a></h3>
+            <div class="project-1 border-box"><a href="https://mml95-35mm-cameras.netlify.app" target="_blank" rel="noopener">
                 <img
                   src="/src/35mm-cameras.png"
                   class="img-fluid"
@@ -175,7 +175,7 @@
                 </a>
             </div>
                 <p class="mt-4 project-description">
-                HTML, CSS/Grid and JavaScript - <a href="https://github.com/mml95/hobby-project-35mm" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                HTML, CSS/Grid and JavaScript - <a href="https://github.com/mml95/hobby-project-35mm" target="_blank" rel="noopener" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -184,8 +184,8 @@
       <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-ethereum.netlify.app" target="_blank" title="Launch Fidelity landing page">Blockchain</a></h2>
-              <div class="project-1 fidelity border-box"><a href="https://mml95-ethereum.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-ethereum.netlify.app" target="_blank" rel="noopener" title="Launch Fidelity landing page">Blockchain</a></h2>
+              <div class="project-1 fidelity border-box"><a href="https://mml95-ethereum.netlify.app" target="_blank" rel="noopener">
                 <img
                   src="/src/ethereum.png"
                   class="img-fluid"
@@ -196,7 +196,7 @@
                 </a>
               </div>
                 <p class="mb-5 mt-4 project-description">
-                  HTML, CSS and JavaScript - <a href="https://github.com/mml95/ethereum" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                  HTML, CSS and JavaScript - <a href="https://github.com/mml95/ethereum" target="_blank" rel="noopener" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -204,8 +204,8 @@
               <!-- <div class="d-flex align-items-center justify-content-center"> -->
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://mml95-coming-soon.netlify.app" target="_blank"  title="Launch storefront">Web Store</a></h3>
-              <div class="project-1 border-box"><a href="https://mml95-coming-soon.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-coming-soon.netlify.app" target="_blank" rel="noopener"  title="Launch storefront">Web Store</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-coming-soon.netlify.app" target="_blank" rel="noopener">
                 <img
                   src="/src/coming-soon.png"
                   class="img-fluid"
@@ -284,10 +284,10 @@
 
   <footer>
     <div class="social-links d-flex justify-content-center">
-      <a href="mailto:mml@mml95.dev" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
-      <a href="https://github.com/mml95" target="_blank" title="View my Github profile"><i class="fa-brands fa-github fa-bounce"style="--fa-animation-duration: 2s"></i></a>
-      <a href="https://www.linkedin.com/in/mml95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="src/MMLResume.pdf" class="d-block d-sm-none" target="_blank" title="View my Resume"><i class="fa-solid fa-file"></i></a>
+      <a href="mailto:mml@mml95.dev" target="_blank" rel="noopener" title="Email me"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://github.com/mml95" target="_blank" rel="noopener" title="View my Github profile"><i class="fa-brands fa-github fa-bounce"style="--fa-animation-duration: 2s"></i></a>
+      <a href="https://www.linkedin.com/in/mml95/" target="_blank" rel="noopener" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="src/MMLResume.pdf" class="d-block d-sm-none" target="_blank" rel="noopener" title="View my Resume"><i class="fa-solid fa-file"></i></a>
     </div> 
     <div class="d-flex justify-content-center">
       <a href="mailto:mml@mml95.dev" class="email-link" title="Email me">mml@mml95.dev</a>
